# bitcoin_testc

./: README.md  bun.lockb  canister_ids.json  dfx.json  package-lock.json  package.json
src/bitcoin_test_backend/: Cargo.toml
src/bitcoin_test_backend/src/: bitcoin_api.rs  ecdsa_api.rs  lib.rs  types.rs
src/bitcoin_test_frontend/: index.html  package.json
src/bitcoin_test_frontend/src/: App.jsx  index.scss
src/bitcoin_test_frontend/src/components/: GetAddress.jsx  Identity.jsx
