[package]
name = "bitcoin_test_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bitcoin = "0.28.1"
bs58 = "0.5.1"
candid = "0.10"
hex = "0.4.3"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ripemd = "0.1.3"
serde = "1.0.203"
sha2 = "0.10.8"
